# bris-configs

./: README.md
configs/AIFS-CRPS/anemoi-inference/: README.md  aifs-ens-crps-1.0.yaml  jobscript.sh  pyproject.toml
configs/AIFS-CRPS/bris-inference/: README.md  aifs-crps.yaml  get_ckpt.sh  jobscript.sh  pyproject.toml
configs/boiling-blizzard/anemoi-inference/: README.md  boiling-blizzard.yaml  jobscript.sh  pyproject.toml
configs/boiling-blizzard/anemoi-training/: README.md  boiling-blizzard_r1.yaml  boiling-blizzard_r2.yaml  boiling-blizzard_r3-6.yaml  boiling-blizzard_r6_ifs.yaml  jobscript.sh  pyproject.toml
configs/boiling-blizzard/bris-inference/: README.md  boiling-blizzard.yaml  config.yaml  jobscript.sh  pyproject.toml
configs/calm-coriolis/bris-inference/: config_amy.yaml  config_dave.yaml  config_ps.yaml  config_verif.yaml  jobscript.sh  jobscript_dbg.sh  pyproject.toml
configs/cozy-cirrus/anemoi-training/: README.md  cozy-cirrus.yaml  jobscript.sh  pyproject.toml
