[project]
name = "aifs-crps-bris-inference"
version = "0.1.0"
description = "uv project for the AIFS-CRPS bris-inference environment"
requires-python = "==3.11.13"
dependencies = [
  "torch==2.5.0",
  "anemoi-inference[huggingface]==0.6.0",
  "anemoi-models==0.6.0",
  "anemoi-graphs==0.6.0",
  "anemoi-datasets==0.5.23",
  "earthkit-regrid==0.4.0",
  "ecmwf-opendata>=0.3.19",
  "packaging",
  "setuptools",
  "psutil",
  "flash-attn",
  "bris",
]

[tool.uv.sources]
bris = { git = "ssh://git@github.com/metno/bris-inference.git", rev = "d1d27c11aef811d0cecaa5e6134ae0f41f4ebb76" }


[tool.uv]
no-build-isolation-package = ["flash-attn"]
