[project]
name = "boiling-blizzard-anemoi-inference"
version = "0.1.0"
description = "uv project for the boiling-blizzard anemoi-inference environment"
requires-python = "==3.11.13"
dependencies = [
  "anemoi-datasets @ git+ssh://git@github.com/ecmwf/anemoi-datasets.git@900545871b2f6a2445601c860eb3b9801c77cc3d",
  "anemoi-graphs @ git+ssh://git@github.com/evenmn/anemoi-core.git@f6f4a82e27f858f4683946173dd59ecb000b48de#subdirectory=graphs",
  "anemoi-inference @ git+ssh://git@github.com/ecmwf/anemoi-inference.git@b9d3a1972d15228eb886b22de36a7bf2f211826e",
  "anemoi-models @ git+ssh://git@github.com/evenmn/anemoi-core.git@f6f4a82e27f858f4683946173dd59ecb000b48de#subdirectory=models",
  "anemoi-training @ git+ssh://git@github.com/evenmn/anemoi-core.git@f6f4a82e27f858f4683946173dd59ecb000b48de#subdirectory=training",
  "anemoi-transform==0.1.15",
  "anemoi-utils==0.4.38",
  "cfgrib==0.9.15.0",
  "earthkit-regrid==0.4.0",
  "huggingface-hub==0.34.3",
  "hydra-core==1.3.2",
  "mlflow-skinny==3.2.0",
  "netCDF4==1.7.2",
  "packaging==25.0",
  "psutil==7.0.0",
  "pytorch-lightning==2.5.2",
  "pytorch-wavelets @ file:///leonardo_work/DestE_330_25/enordhag/repos/pytorch_wavelets",
  "timm==1.0.19",
  "torch==2.6.0",
  "torch-geometric==2.6.1",
  "torchinfo==1.8.0",
  "torchmetrics==1.8.0",
  "torchvision==0.21.0",
  "xarray==2025.7.1",
  "zarr==2.18.4",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[[tool.uv.dependency-metadata]]
name = "anemoi-training"
version = "0.0.0.post909"
requires-dist = [
  "anemoi-datasets",
  "anemoi-graphs",
  "anemoi-models[migrations]",
  "anemoi-transform>=0.1.11",
  "anemoi-utils[mlflow,provenance]>=0.4.32",
]
