[project]
name = "calm-coriolis-bris-inference"
version = "0.1.0"
description = "uv project for the calm-coriolis bris-inference environment"
requires-python = "==3.12.11"
dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.12.13",
  "aiosignal==1.3.2",
  "alembic==1.16.3",
  "anemoi-datasets==0.5.24",
  "anemoi-graphs==0.6.2",
  "anemoi-models==0.8.1",
  "anemoi-training==0.5.1",
  "anemoi-transform==0.1.11",
  "anemoi-utils==0.4.23",
  "aniso8601==10.0.1",
  "annotated-types==0.7.0",
  "antlr4-python3-runtime==4.9.3",
  "anyio==4.9.0",
  "array-api-compat==1.12.0",
  "asciitree==0.3.3",
  "astropy==7.1.0",
  "astropy-iers-data==0.2025.6.30.0.39.40",
  "attrs==25.3.0",
  "blinker==1.9.0",
  "bris",
  "cachetools==5.5.2",
  "certifi==2025.6.15",
  "cffi==1.17.1",
  "cfgrib==0.9.15.0",
  "cftime==1.6.4.post1",
  "cfunits==3.3.7",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "cloudpickle==3.1.1",
  "colorcet==3.1.0",
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "dask==2025.5.1",
  "databricks-sdk==0.58.0",
  "datashader==0.18.1",
  "Deprecated==1.2.18",
  "deprecation==2.1.0",
  "docker==7.1.0",
  "earthkit-data==0.15.0",
  "earthkit-meteo==0.4.1",
  "earthkit-regrid==0.4.0",
  "earthkit-utils==0.0.1",
  "eccodes==2.42.0",
  "einops==0.8.1",
  "entrypoints==0.4",
  "fastapi==0.116.0",
  "fasteners==0.19",
  "filelock==3.18.0",
  "findlibs==0.1.1",
  "Flask==3.1.1",
  "flexcache==0.3",
  "flexparser==0.4",
  "fonttools==4.58.4",
  "frozenlist==1.7.0",
  "fsspec==2025.5.1",
  "future==1.0.0",
  "gitdb==4.0.12",
  "GitPython==3.1.44",
  "google-auth==2.40.3",
  "graphene==3.4.3",
  "graphql-core==3.2.6",
  "graphql-relay==3.2.0",
  "greenlet==3.2.3",
  "gridpp==0.7.1",
  "gunicorn==23.0.0",
  "h11==0.16.0",
  "h3==3.7.7",
  "healpy==1.18.1",
  "hf-xet==1.1.5",
  "huggingface-hub==0.33.2",
  "hydra-core==1.3.2",
  "idna==3.10",
  "importlib_metadata==8.7.0",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.6",
  "joblib==1.5.1",
  "jsonschema==4.24.0",
  "jsonschema-specifications==2025.4.1",
  "kiwisolver==1.4.8",
  "lightning-utilities==0.14.3",
  "llvmlite==0.44.0",
  "locket==1.0.0",
  "lru-dict==1.3.0",
  "Mako==1.3.10",
  "Markdown==3.8.2",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.3",
  "mlflow==3.1.1",
  "mlflow-skinny==3.1.1",
  "mpmath==1.3.0",
  "multidict==6.6.3",
  "multipledispatch==1.0.0",
  "multiurl==0.3.5",
  "narwhals==1.44.0",
  "netCDF4==1.7.2",
  "networkx==3.5",
  "numba==0.61.2",
  "numcodecs==0.15.1",
  "numpy==1.26.4",
  "nvidia-cublas-cu12==12.4.5.8",
  "nvidia-cuda-cupti-cu12==12.4.127",
  "nvidia-cuda-nvrtc-cu12==12.4.127",
  "nvidia-cuda-runtime-cu12==12.4.127",
  "nvidia-cudnn-cu12==9.1.0.70",
  "nvidia-cufft-cu12==11.2.1.3",
  "nvidia-cufile-cu12==1.11.1.6",
  "nvidia-curand-cu12==10.3.5.147",
  "nvidia-cusolver-cu12==11.6.1.9",
  "nvidia-cusparse-cu12==12.3.1.170",
  "nvidia-cusparselt-cu12==0.6.2",
  "nvidia-ml-py==12.575.51",
  "nvidia-nccl-cu12==2.21.5",
  "nvidia-nvjitlink-cu12==12.4.127",
  "nvidia-nvtx-cu12==12.4.127",
  "nvsmi==0.4.2",
  "omegaconf==2.3.0",
  "opentelemetry-api==1.34.1",
  "opentelemetry-sdk==1.34.1",
  "opentelemetry-semantic-conventions==0.55b1",
  "packaging==25.0",
  "pandas==2.3.0",
  "param==2.2.1",
  "partd==1.4.2",
  "pdbufr==0.14.0",
  "pillow==11.3.0",
  "Pint==0.24.4",
  "platformdirs==4.3.8",
  "plotly==6.2.0",
  "pooch==1.8.2",
  "propcache==0.3.2",
  "protobuf==6.31.1",
  "psutil==7.0.0",
  "pyarrow==20.0.0",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pycparser==2.22",
  "pyct==0.5.0",
  "pydantic==2.11.7",
  "pydantic_core==2.33.2",
  "pyerfa==2.0.1.5",
  "pynvml==12.0.0",
  "pyparsing==3.2.3",
  "pyproj==3.7.1",
  "pyshtools==4.13.1",
  "python-dateutil==2.9.0.post0",
  "pytorch-lightning==2.5.2",
  "pytz==2025.2",
  "PyYAML==6.0.2",
  "referencing==0.36.2",
  "requests==2.32.4",
  "rpds-py==0.25.1",
  "rsa==4.9.1",
  "ruff==0.12.7",
  "safetensors==0.5.3",
  "scikit-learn==1.7.0",
  "scipy==1.15.3",
  "semantic-version==2.10.0",
  "six==1.17.0",
  "smmap==5.0.2",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.41",
  "sqlparse==0.5.3",
  "starlette==0.46.2",
  "sympy==1.13.1",
  "threadpoolctl==3.6.0",
  "timm==1.0.16",
  "toolz==1.0.0",
  "torch==2.6.0+cu124",
  "torch-geometric==2.6.1",
  "torchaudio==2.6.0+cu124",
  "torchinfo==1.8.0",
  "torchmetrics==1.7.3",
  "torchvision==0.21.0+cu124",
  "tqdm==4.67.1",
  "trimesh==4.6.13",
  "triton==3.2.0",
  "typeguard==4.4.4",
  "typing-inspection==0.4.1",
  "typing_extensions==4.14.0",
  "tzdata==2025.2",
  "urllib3==2.5.0",
  "uvicorn==0.35.0",
  "verif==1.3.0",
  "Werkzeug==3.1.3",
  "wrapt==1.17.2",
  "xarray==2025.6.1",
  "yarl==1.20.1",
  "zarr==2.17.0",
  "zipp==3.23.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
bris = { git = "ssh://git@github.com/metno/bris-inference.git", rev = "d1d27c11aef811d0cecaa5e6134ae0f41f4ebb76" }
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
